   
   o  Confint() modified to include coefficient estimates, and to include exponentiated coefficients for binomial logit models (suggested by  Ricardo Ocana-Riola). Small fix to method for multinom models.
   
   o  Added cld() display to pairwise comparisons in one-way ANOVA (suggested by Marcin Kozak).
   
   o  Added options to radioButtons() (based on code contributed by Liviu Andronic).
   
   o  Small fixes to code and docs.
   
 Version 1.5-5
 
   o  Added a command stack accessed by popCommand() of length controlled by the length.command.stack option (suggested by Liviu Andronic).
   
   o  Added \code{ask.to.exit} option (suggested by Liviu Andronic).
   
   o  Removed Rcmdr.sh from inst/etc/linux and modified Rcmdr.desktop (according to Dirk Eddelbuettel's instructions).
   
   o  Fixed bug in QQPlot() that surfaced in R. 2.11.0 (reported by Howard Edwards). 
   
   o  rgl package no longer unloaded when the Commander is closed.
   
Version 1.5-6

   o  New Italian translation (courtesy of Stefano Calza).
   
Version 1.6-0

   o  Made compatible with car version 2.0-0.
   
   o  Messages window is now sizeable (via messages.height Rcmdr option) and editable (suggested by Rob James).
   
   o  Small interface improvements.
   
   o  Small fixes.
   
Version 1.6-1

   o  Datasets with invalid names reported by packages no longer listed in "Data > Data in Packages > Select data set from an attached package" dialog (problem reported by Gabor Grothendieck).
   
   o  Fixed bug in changing contrasts option in "Tools > Options" dialog (reported by Kristian Hovde Liland).
   
   o  Updated French, Japanese, Romanian, Russian, and Spanish translations (thanks to Philippe Grosjean, Takaharu Araki, Adrian Dusa, Alexey Shipunov, and Manuel Munoz Marquez).
   
Version 1.6-2

   o  Updated Brazilian Portuguese and Italian translations (thanks to Adriano Azevedo-Filho and Stefano Calza).